--- a/src/components/floatingBall/floatingBall.css
+++ b/src/components/floatingBall/floatingBall.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Futuran";
-    src:url("../../assets/font/FuturaMdBTMedium.ttf");
+    src:url("../../assets/font/Futura.ttf");
 }
 @media only screen and (min-width: 800px) {
 /*媒体查询电脑端*/
