--- a/src/app/hanabriBody/hanabribody.module.css
+++ b/src/app/hanabriBody/hanabribody.module.css
@@ -14,7 +14,7 @@ button{
 
 @font-face {
     font-family: "Futuran";
-    src:url("../assets/font/Futura.ttf");
+    src:url("../../assets/font/Futura.ttf");
 }
 body {
     background: #FFFFFF;
