--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -15,12 +15,13 @@
 /*  padding: 0.4rem;*/
 /*  cursor:pointer*/
 /*}*/
-:global(nav) {
+
+.navWrapper :global(nav) {
     width: 50%;
     height: 50px;
 }
 
-:global(nav) > :global(ul) {
+.navWrapper :global(nav) > :global(ul) {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
@@ -32,7 +33,7 @@
 }
 
 
-:global(nav) > :global(ul) > :global(li) > :global(.nav-link){
+.navWrapper :global(.nav-link) {
     color: #FFFFFF;
     display: inline-block;
     font-size: 1.5vh;
@@ -40,13 +41,13 @@
     transform: scale(1);
     transform-origin: center center;
 }
-:global(nav) > :global(ul) > :global(li) > :global(.nav-link:hover) {
+.navWrapper :global(.nav-link:hover) {
     background: linear-gradient(90deg, rgba(247, 73, 212), rgba(90, 37, 234), rgba(50, 196, 245), rgba(96, 255, 165), rgba(226, 255, 62), rgba(255, 196, 77), rgba(255, 102, 77));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     cursor: pointer;
 }
-:global(nav) > :global(ul) > :global(li) > :global(.nav-link.active) {
+.navWrapper :global(.nav-link.active) {
     background: linear-gradient(90deg, rgba(247, 73, 212), rgba(90, 37, 234), rgba(50, 196, 245), rgba(96, 255, 165), rgba(226, 255, 62), rgba(255, 196, 77), rgba(255, 102, 77));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
