--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -52,7 +52,7 @@
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
-:global(li) > :global(a) {
+.navWrapper :global(li) > :global(a) {  /* 添加父级作用域 */
     color: inherit;
     text-decoration: none;
 }
