--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@ button{
 
 @font-face {
     font-family: "Futuran";
-    src:url("/font/Futura.ttf");
+    src: url("https://hanabri.oss-cn-beijing.aliyuncs.com/HanabriWeb/font/Futura.ttf"); /* 构建后的实际路径 */
 }
 body {
     background: #FFFFFF;
