feature:Architecture Updates

--- a/src/components/floatingBall/floatingBall.module.css
+++ b/src/components/floatingBall/floatingBall.module.css
@@ -55,11 +55,11 @@
         -webkit-filter: blur(5px);
         width: calc(100% + 4px);
         height: calc(100% + 4px);
-        animation: glowing-floatingBall 20s linear infinite;
+        animation: glowingFloatingBall 20s linear infinite;
         transition: opacity 0.3s ease-in-out;
         border-radius: 10px;
     }
-    @keyframes glowing-floatingBall {
+    @keyframes glowingFloatingBall {
         0% {
             background-position: 0 0;
         }
